--- a/nginx_vol/nginx.conf
+++ b/nginx_vol/nginx.conf
@@ -43,13 +43,13 @@ server {
         return 302 /login.html;
     }
 
-    location = /login.html {
+    location = /login/ {
         root /usr/share/nginx/html;
         index login.html;
         try_files $uri $uri/ =404;
     }
 
-    location = /daisyfans.html {
+    location = /daisyfans/ {
         root /usr/share/nginx/html;
         index daisyfans.html;
         try_files $uri $uri/ =404;
@@ -201,13 +201,35 @@ server {
         limit_except POST HEAD {
             deny all;
         }
-
-
-        proxy_pass http://wad-upload-api:5000;
+        proxy_pass http://wad-upload-api:5000/submit-wad;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         client_max_body_size 100M;
+    }
+
+    location /admin/ {    
+        add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
+    
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+    
+        proxy_pass http://wad-upload-api:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
