Default name change

--- a/nginx_vol/nginx.conf
+++ b/nginx_vol/nginx.conf
@@ -25,7 +25,7 @@ server {
     # add_header Content-Security-Policy "default-src 'self'; script-src 'self'; object-src 'none';";
 
     proxy_cookie_path / "/; HTTPOnly; Secure; SameSite=Strict";
-    proxy_cookie_domain odamex.zerofuchs.co.za:443 $host;
+    proxy_cookie_domain odamex.zerofuchs.local:443 $host;
 
     location / {
         limit_except GET HEAD {
@@ -56,13 +56,13 @@ server {
     }
 
     location /auth/login {    # Changed from "location login"
-        add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+        add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.local:443' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
 
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+            add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.local:443' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
@@ -80,13 +80,13 @@ server {
     }
 
     location /auth/logout {    # Changed from "location logout"
-        add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+        add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.local:443' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
 
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+            add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.local:443' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
@@ -103,13 +103,13 @@ server {
     }
 
     location /auth/session {    # Changed from "location session"
-        add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+        add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.local:443' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
 
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+            add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.local:443' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
@@ -209,13 +209,13 @@ server {
     }
 
     location /admin/ {    
-        add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+        add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.local:443' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
     
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.co.za:443' always;
+            add_header 'Access-Control-Allow-Origin' 'https://odamex.zerofuchs.local:443' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
@@ -235,7 +235,7 @@ server {
 
 server {
     listen 444 ssl;
-    server_name localhost wads.zerofuchs.net;
+    server_name localhost wads.zerofuchs.local;
     client_max_body_size 100M;
 
     ssl_certificate /etc/nginx/ssl/wads.crt;
