--- a/nginx/modsecurity/modsecurity.conf
+++ b/nginx/modsecurity/modsecurity.conf
@@ -16,4 +16,4 @@ SecAuditLog /var/log/nginx/modsec_audit.log
 
 # Include OWASP CRS rules
 Include /etc/nginx/modsecurity/owasp-crs/crs-setup.conf
-# Include /etc/nginx/modsecurity/owasp-crs/rules/*.conf
+Include /etc/nginx/modsecurity/owasp-crs/rules/*.conf
