--- a/nginx/conf.d/dockermex.conf
+++ b/nginx/conf.d/dockermex.conf
@@ -126,11 +126,11 @@ server {
     }
 
     # Serve /pwads directly
-    location /pwads/ {
+    location /pwads/ {   
+        root /pwads/;     
         limit_except GET HEAD {
             deny all;
         }
-        alias /pwads/;
         autoindex on;
         autoindex_exact_size off;
         autoindex_localtime on;
@@ -138,10 +138,10 @@ server {
 
     # Serve /wads directly
     location /iwads/ {
+        root /iwads/;
         limit_except GET HEAD {
             deny all;
         }
-        alias /iwads/;
         autoindex on;
         autoindex_exact_size off;
         autoindex_localtime on;
